# N.O.V.A-AI

./: .gitignore  README.MD  info_project.py  package-lock.json  package.json
analytics/dashboards/: usage_dashboard.json
analytics/reports/: monthly_report.md
analytics/tracking/: events.json
android/: gradle.properties
android/app/: build.gradle  nova-release-key.keystore
backend/: package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/cache/: redis_cache.py
backend/app/db/: mongodb.py  postgresql.py  redis.py
backend/app/middleware/: audit.py  cors.py
backend/app/models/: agent.py  chat.py  plan.py  user.py
backend/app/monitoring/: alerts.py  metrics.py  tracing.py
backend/app/routes/: admin.py  agent_router.py  agents.py  auth.py  auth_full.py  chat.py  chat_full.py  plans.py
backend/app/services/: payments.py
backend/app/services/agents/: creative.py  creative_premium.py  investor.py  investor_premium.py  programmer.py  secretary.py  student.py
backend/app/services/apis/: nasa.py  wikimedia.py
backend/app/test/: conftest.py
backend/app/test/integration/: test_agents.py
backend/app/test/security/: test_encryption.py
backend/app/tests/: test_chat.py
backend/app/tests/load/: test_performance.py
backend/app/tests/unit/: test_auth.py  test_redis_cache.py
backend/app/utils/: logger.py  rate_limits.py  security.py
frontend/: App.js  app.json  i18n.js  package-lock.json  package.json
frontend/android/: settings.gradle
support/: changelog.md  faq.md  incident_response.md
(+45 files in other folders)
